ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 25-APR-2011
description here
====================================================================================

******************************************
CHANGELOG: 02-APR-2012  MPB
Remove long-down option to get to telemetry screens - can cause reboot

******************************************
CHANGELOG: 01-APR-2012  MPB
move onoffmenuitem() outside FRSKY conditional compile

******************************************
CHANGELOG: 01-APR-2012  MPB
Add optional PPMSIM protocol, Fix Safety switch menu bug, Allow GPS altitude 
on normal altitude screen with alarm and imperial conversion, fix time in 
stamp.h (makefile), slim the code a bit.

******************************************
CHANGELOG: 03-MAR-2012  MPB
Fix compile error when compiling non-FRSKY version

******************************************
CHANGELOG: 02-MAR-2012  MPB
Fuel bar display, Telemetry screen access easier
+ V2 changes

******************************************
CHANGELOG: 28-FEB-2012  ER
Changed "MAX" to "HALF" to clarify this for newcomers
Fix lockup issue when moving from PXX with rxnum>32 to PPM.

******************************************
CHANGELOG: 25-FEB-2012  MPB+ER
Space saving c.230 bytes flash, and another 222 also saved
Add confirmation screen to delete mix 

******************************************
CHANGELOG: 22-FEB-2012  MPB
PXX - fix infinite loop in putPcmByte
+ V2 changes

******************************************
CHANGELOG: 22-FEB-2012  MPB
PXX - change to MSB send first and data scaling + V2 changes

******************************************
CHANGELOG: 11-FEB-2012  ER
PXX work - change to not stuff the head and tail bytes.

******************************************
CHANGELOG: 07-FEB-2012  RFT
Audio update to save space. 324 bytes saved
